Bevel factor feature errors on rendering #37861

Closed
opened 2013-12-19 00:17:22 +01:00 by Daniel Salazar · 9 comments
Member

System Information
openSUSE 12.3 64bits

Blender Version
Broken: Blender 2.69.7 d7033d5

Short description of error
Lots of "Error: Cannot convert curve to mesh (does the curve have any segments?)" prints in the terminal caused by the use of curve bevel factor feature.

Exact steps for others to reproduce the error
Press F12 CurveError2.blend
No errors
Esc and move to an earlier frame
Press F12
Lots of errors in the terminal

**System Information** openSUSE 12.3 64bits **Blender Version** Broken: Blender 2.69.7 d7033d5 **Short description of error** Lots of "Error: Cannot convert curve to mesh (does the curve have any segments?)" prints in the terminal caused by the use of curve bevel factor feature. **Exact steps for others to reproduce the error** Press F12 [CurveError2.blend](https://archive.blender.org/developer/F46206/CurveError2.blend) No errors Esc and move to an earlier frame Press F12 Lots of errors in the terminal
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

This issue was referenced by blender/blender-addons-contrib@e8c801f86c

This issue was referenced by blender/blender-addons-contrib@e8c801f86c9ac549251b9e5d8250f177b1936a3c

This issue was referenced by e8c801f86c

This issue was referenced by e8c801f86c9ac549251b9e5d8250f177b1936a3c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e8c801f86c.

Closed by commit e8c801f86c.

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

The way these curves are animated, the curve gives an empty mesh for rendering, which is valid, it shouldn't print any error message.

Fixed now, thanks for the report. The way these curves are animated, the curve gives an empty mesh for rendering, which is valid, it shouldn't print any error message.
Author
Member

Thanks man and nice avatar!

Thanks man and nice avatar!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37861
No description provided.