Fix T37861: remove unnecessary error print when viewport rendering a curve that gives an empty mesh.